pages/about.module.css
.mainHeader {
    font-family: var(--fonts);
    color: var(--text-color);
    background: var(--bg-color);
    max-width: 100%;
}

.headingLeft {
    display:flex;
    justify-content:center;
    align-items:center;
    font-weight: 700;
    color: var(--text-color);
    padding: 5rem 1rem;
    font-size: 2.5rem
}

.headingRight {
    padding: 5rem 1rem;
    display:flex;
    justify-content:center;
    align-items:center;
    z-index: 0;
}

.yosemite {
    background: var(--bg-color);
}

.black {
    background: #121212;
}

@media only screen and (min-width: 688px) {

}

@media only screen and (min-width: 992px) {
    .headingLeft {
        float: left;
        max-width: 50%;
    }
    .headingRight {
        float: right;
        max-width: 50%;
    }

}

@media only screen and (min-width: 1312px) {

}

